Updated to build with Java 8+