@@ -12,6 +12,7 @@ import java.nio.charset.CharsetEncoder;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import javax.crypto.Cipher;
 import javax.crypto.SecretKey;
@@ -77,9 +78,9 @@ public class Encoding extends LessonAdapter
 
     // local encoders
 
-    private static sun.misc.BASE64Decoder decoder = new sun.misc.BASE64Decoder();
+    private static Base64.Decoder decoder = Base64.getDecoder();
 
-    private static sun.misc.BASE64Encoder encoder = new sun.misc.BASE64Encoder();
+    private static Base64.Encoder encoder = Base64.getEncoder();
 
     // encryption constant
 
@@ -99,7 +100,7 @@ public class Encoding extends LessonAdapter
     public static String base64Decode(String str) throws IOException
     {
 
-        byte[] b = decoder.decodeBuffer(str);
+        byte[] b = decoder.decode(str);
 
         return (new String(b));
     }
@@ -147,7 +148,7 @@ public class Encoding extends LessonAdapter
 
         byte[] b = str.getBytes();
 
-        return (encoder.encode(b));
+        return (new String(encoder.encode(b)));
     }
 
     /**
@@ -161,7 +162,7 @@ public class Encoding extends LessonAdapter
     public static String base64Encode(byte[] b)
     {
 
-        return (encoder.encode(b));
+        return (new String(encoder.encode(b)));
     }
 
     /**
@@ -330,7 +331,7 @@ public class Encoding extends LessonAdapter
 
             passwordDecryptCipher.init(Cipher.DECRYPT_MODE, k, ps);
 
-            byte[] dec = decoder.decodeBuffer(str);
+            byte[] dec = decoder.decode(str);
 
             byte[] utf8 = passwordDecryptCipher.doFinal(dec);
 
@@ -379,7 +380,7 @@ public class Encoding extends LessonAdapter
 
             byte[] enc = passwordEncryptCipher.doFinal(utf8);
 
-            return encoder.encode(enc);
+            return (new String(encoder.encode(enc)));
         }
 
         catch (Exception e)
